--- a/src/css/binder-explorer.css
+++ b/src/css/binder-explorer.css
@@ -26,6 +26,10 @@ circle.node.hover {
     fill: red;
 }
 
+circle.node.selected {
+    fill: red;
+}
+
 /* Color of the hovered links */
 line.link.hover {
     stroke: red;
@@ -33,7 +37,8 @@ line.link.hover {
 
 /* Color of the selected links */
 line.link.selected {
-
+    stroke: red;
+    stroke-width: 5;
 }
 
 /* Color of neutral links */
