Added a tooltip for user services.

--- a/src/templates/template-userservices.hbs
+++ b/src/templates/template-userservices.hbs
@@ -13,17 +13,4 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 --}}
-{{!
- id: Unique identifier for the dialog box.
- serviceName: Name of the service
- aidl: The unformatted AIDL code.
---}}
-<div class="dialog" id="{{id}}">
-
-    <div class="title">{{name}}</div>
-
-    <div class="aidl">
-        {{aidl}}
-    </div>
-
-</div>
+<h4>{{name}}</h4>
